refactor(outbox): extract best-effort saga tail