@@ -6,26 +6,13 @@ import java.time.Instant;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.function.Consumer;
 
 import com.cp.ecommerce.adapter.persistence.order.outbox.metrics.SagaMetrics;
 import com.cp.ecommerce.domain.inventory.port.incoming.ManageStockInPort;
-import com.cp.ecommerce.domain.order.DuplicateOrderCheckResult;
 import com.cp.ecommerce.domain.order.Order;
-import com.cp.ecommerce.domain.order.RemarksTriageCategory;
-import com.cp.ecommerce.domain.order.RemarksTriageResult;
 import com.cp.ecommerce.domain.order.port.incoming.CancelOrderInPort;
-import com.cp.ecommerce.domain.order.port.incoming.ClassifyOrderRemarksInPort;
-import com.cp.ecommerce.domain.order.port.incoming.DetectDuplicateOrderInPort;
-import com.cp.ecommerce.domain.order.port.incoming.ExportOrderInPort;
 import com.cp.ecommerce.domain.order.port.incoming.ManageOrderInPort;
-import com.cp.ecommerce.domain.order.port.incoming.PublishOrderAnalyticsEventInPort;
-import com.cp.ecommerce.domain.order.port.incoming.PublishOrderAuditEventInPort;
-import com.cp.ecommerce.domain.order.port.incoming.RouteOrderNotificationInPort;
 import com.cp.ecommerce.domain.order.port.incoming.SendMessageInPort;
-import com.cp.ecommerce.domain.order.port.incoming.SendOrderConfirmationEmailInPort;
 import com.cp.ecommerce.domain.payment.PaymentStatus;
 import com.cp.ecommerce.domain.payment.PaymentTransaction;
 import com.cp.ecommerce.domain.payment.port.incoming.ManagePaymentInPort;
@@ -72,19 +59,7 @@ public class OrderPlacementSagaOrchestrator {
 
     private final SendMessageInPort sendMessageInPort;
 
-    private final SendOrderConfirmationEmailInPort sendOrderConfirmationEmailInPort;
-
-    private final ExportOrderInPort exportOrderInPort;
-
-    private final PublishOrderAuditEventInPort publishOrderAuditEventInPort;
-
-    private final PublishOrderAnalyticsEventInPort publishOrderAnalyticsEventInPort;
-
-    private final RouteOrderNotificationInPort routeOrderNotificationInPort;
-
-    private final ClassifyOrderRemarksInPort classifyOrderRemarksInPort;
-
-    private final DetectDuplicateOrderInPort detectDuplicateOrderInPort;
+    private final OrderPlacementBestEffortTail bestEffortTail;
 
     private final CancelOrderInPort cancelOrderInPort;
 
@@ -176,41 +151,8 @@ public class OrderPlacementSagaOrchestrator {
         }
         if (notifyFulfillment(order, claim)) {
 
-            runBestEffortStepsConcurrently(order);
+            bestEffortTail.run(order);
             completePlacementClaim(claim);
-        }
-    }
-
-    /**
-     * Runs the saga's best-effort tail steps - confirmation email, S3 export, SQS audit, Kafka analytics, Camel notification
-     * routing, AI-assisted remarks triage - concurrently instead of one after another. They are mutually independent (each only
-     * reads the already-loaded {@code order}; none depends on another's outcome), so this is a textbook fan-out: tail latency
-     * drops to that of the single slowest step instead of their sum.
-     *
-     * <p>
-     * Uses the stable {@link Executors#newVirtualThreadPerTaskExecutor()} (available since JDK 21) rather than
-     * {@code StructuredTaskScope}, the API purpose-built for exactly this kind of fan-out/join: as of JDK 25,
-     * {@code StructuredTaskScope} is still a preview API (JEP 505, its fifth preview), which would force every build and
-     * deployment of this application onto {@code --enable-preview} - not an acceptable trade-off for a showcase meant to
-     * demonstrate production-grade engineering rather than bleeding-edge previews. See ADR 0013.
-     *
-     * <p>
-     * {@code ExecutorService#close()} (JDK 19+) blocks until every task submitted before it was called has finished, giving the
-     * same "wait for all steps" semantics the previous sequential code had, just executed in parallel. Each step already
-     * catches and logs its own {@link RuntimeException} (see below), so a failure in one never affects the others, and the
-     * event is still marked {@code SENT} once all six have at least been attempted - unchanged from before this change.
-     */
-    private void runBestEffortStepsConcurrently(final Order order) {
-
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-
-            executor.execute(() -> sendConfirmationEmail(order));
-            executor.execute(() -> exportOrder(order));
-            executor.execute(() -> publishAuditEvent(order));
-            executor.execute(() -> publishAnalyticsEvent(order));
-            executor.execute(() -> routeNotification(order));
-            executor.execute(() -> classifyRemarks(order));
-            executor.execute(() -> detectDuplicateOrder(order));
         }
     }
 
@@ -462,116 +404,6 @@ public class OrderPlacementSagaOrchestrator {
     private static String stockReservationId(final Order order) {
 
         return order.getStockReservationId() == null ? order.getOrderNumber() : order.getStockReservationId();
-    }
-
-    private void sendConfirmationEmail(final Order order) {
-
-        runBestEffortStep(
-                "confirmation-email",
-                order,
-                sendOrderConfirmationEmailInPort::sendConfirmationEmail,
-                "Could not send order confirmation email (best-effort): {}");
-    }
-
-    private void exportOrder(final Order order) {
-
-        runBestEffortStep("s3-export", order, exportOrderInPort::exportOrder, "Could not export order to S3 (best-effort): {}");
-    }
-
-    private void publishAuditEvent(final Order order) {
-
-        runBestEffortStep(
-                "sqs-audit",
-                order,
-                publishOrderAuditEventInPort::publishAuditEvent,
-                "Could not publish SQS audit event (best-effort): {}");
-    }
-
-    private void publishAnalyticsEvent(final Order order) {
-
-        runBestEffortStep(
-                "kafka-analytics",
-                order,
-                publishOrderAnalyticsEventInPort::publishAnalyticsEvent,
-                "Could not publish Kafka analytics event (best-effort): {}");
-    }
-
-    private void routeNotification(final Order order) {
-
-        runBestEffortStep(
-                "camel-routing",
-                order,
-                routeOrderNotificationInPort::routeNotification,
-                "Could not route order notification via Camel (best-effort): {}");
-    }
-
-    // Custom (not runBestEffortStep-based) step: unlike the other five, this one needs the *result* of its in-port call
-    // (the triage category/rationale), not just a success/failure outcome, to log a targeted warning for SUSPICIOUS orders
-    // and to tag the SagaMetrics counter by category - see ClassifyOrderRemarksOutPort's javadoc for why this is
-    // deliberately never used to automatically act on the order (human-in-the-loop only).
-    private void classifyRemarks(final Order order) {
-
-        final long startNanos = System.nanoTime();
-        RuntimeFailureBoundary.run(() -> {
-            final RemarksTriageResult result = classifyOrderRemarksInPort.classifyRemarks(order);
-            sagaMetrics.recordStepDuration("ai-remarks-triage", elapsedSince(startNanos), true);
-            sagaMetrics.recordRemarksClassification(result.getCategory());
-            if (result.getCategory() == RemarksTriageCategory.SUSPICIOUS) {
-                log.warn(
-                        "Order remarks flagged as SUSPICIOUS by AI triage (human review recommended): orderNumber={}, rationale={}",
-                        order.getOrderNumber(),
-                        result.getRationale());
-            }
-        }, exception -> {
-            sagaMetrics.recordStepDuration("ai-remarks-triage", elapsedSince(startNanos), false);
-            log.warn("Could not classify order remarks (best-effort): {}", order.getOrderNumber(), exception);
-        });
-    }
-
-    // Custom (not runBestEffortStep-based) step, for the same reason as classifyRemarks above: needs the check's result
-    // (matched order number/similarity score), not just a success/failure outcome, to log a targeted warning and tag the
-    // SagaMetrics counter - see DetectDuplicateOrderOutPort's javadoc for why this is deliberately never used to
-    // automatically act on the order (human-in-the-loop only, same as the remarks triage).
-    private void detectDuplicateOrder(final Order order) {
-
-        final long startNanos = System.nanoTime();
-        RuntimeFailureBoundary.run(() -> {
-            final DuplicateOrderCheckResult result = detectDuplicateOrderInPort.detectDuplicate(order);
-            sagaMetrics.recordStepDuration("ai-duplicate-order-detection", elapsedSince(startNanos), true);
-            sagaMetrics.recordDuplicateOrderDetection(result.isDuplicate());
-            if (result.isDuplicate()) {
-                log.warn(
-                        "Order flagged as a likely duplicate by AI similarity check (human review recommended): "
-                                + "orderNumber={}, matchedOrderNumber={}, similarityScore={}, rationale={}",
-                        order.getOrderNumber(),
-                        result.getMatchedOrderNumber(),
-                        result.getSimilarityScore(),
-                        result.getRationale());
-            }
-        }, exception -> {
-            sagaMetrics.recordStepDuration("ai-duplicate-order-detection", elapsedSince(startNanos), false);
-            log.warn("Could not run AI duplicate-order detection (best-effort): {}", order.getOrderNumber(), exception);
-        });
-    }
-
-    // Shared execute-time-catch-log wrapper for the saga's independent, best-effort tail steps that only need a
-    // success/failure outcome (unlike classifyRemarks above, which needs its result value too): each already had
-    // identical structure before metrics were added (call the port, catch RuntimeException, log a warning), so timing
-    // is added here once instead of duplicated across all five step methods above.
-    private void runBestEffortStep(
-            final String step,
-            final Order order,
-            final Consumer<Order> action,
-            final String failureLogMessage) {
-
-        final long startNanos = System.nanoTime();
-        RuntimeFailureBoundary.run(() -> {
-            action.accept(order);
-            sagaMetrics.recordStepDuration(step, elapsedSince(startNanos), true);
-        }, exception -> {
-            sagaMetrics.recordStepDuration(step, elapsedSince(startNanos), false);
-            log.warn(failureLogMessage, order.getOrderNumber(), exception);
-        });
     }
 
     private boolean ownsPlacementClaim(final OutboxEventEntity event, final SagaClaim claim) {
